style: prettier formatting

--- a/src/styles/_box-sizing.scss
+++ b/src/styles/_box-sizing.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -25,7 +22,12 @@ legend,
 pre,
 code,
 a,
-h1,h2,h3,h4,h5,h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 p,
 ul,
 ol,
@@ -38,12 +40,12 @@ table,
 td,
 th,
 tr,
-input[type="email"],
-input[type="number"],
-input[type="password"],
-input[type="tel"],
-input[type="text"],
-input[type="url"],
+input[type='email'],
+input[type='number'],
+input[type='password'],
+input[type='tel'],
+input[type='text'],
+input[type='url'],
 .border-box {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
