--- a/src/styles/_debug_children.scss
+++ b/src/styles/_debug_children.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -14,5 +11,6 @@
 
 */
 
-.debug * { outline: 1px solid gold; }
-
+.debug * {
+	outline: 1px solid gold;
+}
