--- a/src/styles/_images.scss
+++ b/src/styles/_images.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -14,5 +11,6 @@
 
 /* Responsive images! */
 
-img { max-width: 100%; }
-
+img {
+	max-width: 100%;
+}
