--- a/src/styles/_background-size.scss
+++ b/src/styles/_background-size.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -22,20 +19,36 @@
   on an html element.
 */
 
-  .cover { background-size: cover!important; }
-  .contain { background-size: contain!important; }
+.cover {
+	background-size: cover !important;
+}
+.contain {
+	background-size: contain !important;
+}
 
 @media #{$breakpoint-not-small} {
-  .cover-ns { background-size: cover!important; }
-  .contain-ns { background-size: contain!important; }
+	.cover-ns {
+		background-size: cover !important;
+	}
+	.contain-ns {
+		background-size: contain !important;
+	}
 }
 
 @media #{$breakpoint-medium} {
-  .cover-m { background-size: cover!important; }
-  .contain-m { background-size: contain!important; }
+	.cover-m {
+		background-size: cover !important;
+	}
+	.contain-m {
+		background-size: contain !important;
+	}
 }
 
 @media #{$breakpoint-large} {
-  .cover-l { background-size: cover!important; }
-  .contain-l { background-size: contain!important; }
+	.cover-l {
+		background-size: cover !important;
+	}
+	.contain-l {
+		background-size: contain !important;
+	}
 }
