--- a/src/styles/_clears.scss
+++ b/src/styles/_clears.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -16,32 +13,71 @@
    Ref: http://nicolasgallagher.com/micro-clearfix-hack/ */
 
 .cf:before,
-.cf:after { content: " "; display: table; }
-.cf:after { clear: both; }
-.cf {       *zoom: 1; }
+.cf:after {
+	content: ' ';
+	display: table;
+}
+.cf:after {
+	clear: both;
+}
+.cf {
+	*zoom: 1;
+}
 
-.cl { clear: left; }
-.cr { clear: right; }
-.cb { clear: both; }
-.cn { clear: none; }
+.cl {
+	clear: left;
+}
+.cr {
+	clear: right;
+}
+.cb {
+	clear: both;
+}
+.cn {
+	clear: none;
+}
 
 @media #{$breakpoint-not-small} {
-  .cl-ns { clear: left; }
-  .cr-ns { clear: right; }
-  .cb-ns { clear: both; }
-  .cn-ns { clear: none; }
+	.cl-ns {
+		clear: left;
+	}
+	.cr-ns {
+		clear: right;
+	}
+	.cb-ns {
+		clear: both;
+	}
+	.cn-ns {
+		clear: none;
+	}
 }
 
 @media #{$breakpoint-medium} {
-  .cl-m { clear: left; }
-  .cr-m { clear: right; }
-  .cb-m { clear: both; }
-  .cn-m { clear: none; }
+	.cl-m {
+		clear: left;
+	}
+	.cr-m {
+		clear: right;
+	}
+	.cb-m {
+		clear: both;
+	}
+	.cn-m {
+		clear: none;
+	}
 }
 
 @media #{$breakpoint-large} {
-  .cl-l { clear: left; }
-  .cr-l { clear: right; }
-  .cb-l { clear: both; }
-  .cn-l { clear: none; }
+	.cl-l {
+		clear: left;
+	}
+	.cr-l {
+		clear: right;
+	}
+	.cb-l {
+		clear: both;
+	}
+	.cn-l {
+		clear: none;
+	}
 }
