--- a/src/styles/_debug-children.scss
+++ b/src/styles/_debug-children.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -15,7 +12,12 @@
 
 */
 
-.debug * { outline: 1px solid gold; }
-.debug-white * { outline: 1px solid white; }
-.debug-black * { outline: 1px solid black; }
-
+.debug * {
+	outline: 1px solid gold;
+}
+.debug-white * {
+	outline: 1px solid white;
+}
+.debug-black * {
+	outline: 1px solid black;
+}
