--- a/src/styles/_floats.scss
+++ b/src/styles/_floats.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -31,26 +28,56 @@
 
 */
 
-
-
-.fl { float: left;  _display: inline; }
-.fr { float: right; _display: inline; }
-.fn { float: none; }
+.fl {
+	float: left;
+	_display: inline;
+}
+.fr {
+	float: right;
+	_display: inline;
+}
+.fn {
+	float: none;
+}
 
 @media #{$breakpoint-not-small} {
-  .fl-ns { float: left; _display: inline; }
-  .fr-ns { float: right; _display: inline; }
-  .fn-ns { float: none; }
+	.fl-ns {
+		float: left;
+		_display: inline;
+	}
+	.fr-ns {
+		float: right;
+		_display: inline;
+	}
+	.fn-ns {
+		float: none;
+	}
 }
 
 @media #{$breakpoint-medium} {
-  .fl-m { float: left; _display: inline; }
-  .fr-m { float: right; _display: inline; }
-  .fn-m { float: none; }
+	.fl-m {
+		float: left;
+		_display: inline;
+	}
+	.fr-m {
+		float: right;
+		_display: inline;
+	}
+	.fn-m {
+		float: none;
+	}
 }
 
 @media #{$breakpoint-large} {
-  .fl-l { float: left; _display: inline; }
-  .fr-l { float: right; _display: inline; }
-  .fn-l { float: none; }
+	.fl-l {
+		float: left;
+		_display: inline;
+	}
+	.fr-l {
+		float: right;
+		_display: inline;
+	}
+	.fn-l {
+		float: none;
+	}
 }
