--- a/src/styles/_font-family.scss
+++ b/src/styles/_font-family.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -12,87 +9,70 @@
 
 */
 
-
 .sans-serif {
-  font-family: $sans-serif;
+	font-family: $sans-serif;
 }
 
 .serif {
-  font-family: $serif;
+	font-family: $serif;
 }
 
 .system-sans-serif {
-  font-family: sans-serif;
+	font-family: sans-serif;
 }
 
 .system-serif {
-  font-family: serif;
+	font-family: serif;
 }
-
 
 /* Monospaced Typefaces (for code) */
 
 /* From http://cssfontstack.com */
-code, .code {
-  font-family: 'IBM Plex Mono',
-               monospace;
+code,
+.code {
+	font-family: 'IBM Plex Mono', monospace;
 }
 
 .courier {
-  font-family: 'Courier Next',
-               courier,
-               monospace;
+	font-family: 'Courier Next', courier, monospace;
 }
-
 
 /* Sans-Serif Typefaces */
 
 .helvetica {
-  font-family: 'helvetica neue', helvetica,
-               sans-serif;
+	font-family: 'helvetica neue', helvetica, sans-serif;
 }
 
 .avenir {
-  font-family: 'avenir next', avenir,
-               sans-serif;
+	font-family: 'avenir next', avenir, sans-serif;
 }
-
 
 /* Serif Typefaces */
 
 .athelas {
-  font-family: athelas,
-               georgia,
-               serif;
+	font-family: athelas, georgia, serif;
 }
 
 .georgia {
-  font-family: georgia,
-               serif;
+	font-family: georgia, serif;
 }
 
 .times {
-  font-family: times,
-               serif;
+	font-family: times, serif;
 }
 
 .bodoni {
-  font-family: "Bodoni MT",
-                serif;
+	font-family: 'Bodoni MT', serif;
 }
 
 .calisto {
-  font-family: "Calisto MT",
-                serif;
+	font-family: 'Calisto MT', serif;
 }
 
 .garamond {
-  font-family: garamond,
-               serif;
+	font-family: garamond, serif;
 }
 
 .baskerville {
-  font-family: baskerville,
-               serif;
+	font-family: baskerville, serif;
 }
-
