--- a/src/styles/_font-style.scss
+++ b/src/styles/_font-style.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -17,20 +14,36 @@
 
 */
 
-.i         { font-style: italic; }
-.fs-normal { font-style: normal; }
+.i {
+	font-style: italic;
+}
+.fs-normal {
+	font-style: normal;
+}
 
 @media #{$breakpoint-not-small} {
-  .i-ns       { font-style: italic; }
-  .fs-normal-ns     { font-style: normal; }
+	.i-ns {
+		font-style: italic;
+	}
+	.fs-normal-ns {
+		font-style: normal;
+	}
 }
 
 @media #{$breakpoint-medium} {
-  .i-m       { font-style: italic; }
-  .fs-normal-m     { font-style: normal; }
+	.i-m {
+		font-style: italic;
+	}
+	.fs-normal-m {
+		font-style: normal;
+	}
 }
 
 @media #{$breakpoint-large} {
-  .i-l       { font-style: italic; }
-  .fs-normal-l     { font-style: normal; }
+	.i-l {
+		font-style: italic;
+	}
+	.fs-normal-l {
+		font-style: normal;
+	}
 }
