--- a/src/styles/_gradients.scss
+++ b/src/styles/_gradients.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -12,18 +9,18 @@
 
 */
 
-.gradient-blue { 
-  background-image: linear-gradient(#4570B0, #0081C2);
+.gradient-blue {
+	background-image: linear-gradient(#4570b0, #0081c2);
 }
 
-.gradient-blue-reversed { 
-  background-image: linear-gradient(#0081C2, #4570B0);
+.gradient-blue-reversed {
+	background-image: linear-gradient(#0081c2, #4570b0);
 }
 
-.gradient-light-blue { 
-  background-image: linear-gradient(#76D3FE, #008AE0);
+.gradient-light-blue {
+	background-image: linear-gradient(#76d3fe, #008ae0);
 }
 
-.gradient-light-blue-reversed { 
-  background-image: linear-gradient(#008AE0, #76D3FE);
+.gradient-light-blue-reversed {
+	background-image: linear-gradient(#008ae0, #76d3fe);
 }
