--- a/src/styles/_letter-spacing.scss
+++ b/src/styles/_letter-spacing.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -17,24 +14,48 @@
 
 */
 
-.tracked       { letter-spacing:  $letter-spacing-1; }
-.tracked-tight { letter-spacing: $letter-spacing-tight; }
-.tracked-mega  { letter-spacing:  $letter-spacing-2; }
+.tracked {
+	letter-spacing: $letter-spacing-1;
+}
+.tracked-tight {
+	letter-spacing: $letter-spacing-tight;
+}
+.tracked-mega {
+	letter-spacing: $letter-spacing-2;
+}
 
 @media #{$breakpoint-not-small} {
-  .tracked-ns       { letter-spacing:  $letter-spacing-1; }
-  .tracked-tight-ns { letter-spacing: $letter-spacing-tight; }
-  .tracked-mega-ns  { letter-spacing:  $letter-spacing-2; }
+	.tracked-ns {
+		letter-spacing: $letter-spacing-1;
+	}
+	.tracked-tight-ns {
+		letter-spacing: $letter-spacing-tight;
+	}
+	.tracked-mega-ns {
+		letter-spacing: $letter-spacing-2;
+	}
 }
 
 @media #{$breakpoint-medium} {
-  .tracked-m       { letter-spacing:  $letter-spacing-1; }
-  .tracked-tight-m { letter-spacing: $letter-spacing-tight; }
-  .tracked-mega-m  { letter-spacing:  $letter-spacing-2; }
+	.tracked-m {
+		letter-spacing: $letter-spacing-1;
+	}
+	.tracked-tight-m {
+		letter-spacing: $letter-spacing-tight;
+	}
+	.tracked-mega-m {
+		letter-spacing: $letter-spacing-2;
+	}
 }
 
 @media #{$breakpoint-large} {
-  .tracked-l       { letter-spacing:  $letter-spacing-1; }
-  .tracked-tight-l { letter-spacing: $letter-spacing-tight; }
-  .tracked-mega-l  { letter-spacing:  $letter-spacing-2; }
+	.tracked-l {
+		letter-spacing: $letter-spacing-1;
+	}
+	.tracked-tight-l {
+		letter-spacing: $letter-spacing-tight;
+	}
+	.tracked-mega-l {
+		letter-spacing: $letter-spacing-2;
+	}
 }
