--- a/src/styles/_line-height.scss
+++ b/src/styles/_line-height.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -17,25 +14,48 @@
 
 */
 
-  .lh-solid { line-height: $line-height-solid; }
-  .lh-title { line-height: $line-height-title; }
-  .lh-copy  { line-height: $line-height-copy; }
+.lh-solid {
+	line-height: $line-height-solid;
+}
+.lh-title {
+	line-height: $line-height-title;
+}
+.lh-copy {
+	line-height: $line-height-copy;
+}
 
 @media #{$breakpoint-not-small} {
-  .lh-solid-ns { line-height: $line-height-solid; }
-  .lh-title-ns { line-height: $line-height-title; }
-  .lh-copy-ns  { line-height: $line-height-copy; }
+	.lh-solid-ns {
+		line-height: $line-height-solid;
+	}
+	.lh-title-ns {
+		line-height: $line-height-title;
+	}
+	.lh-copy-ns {
+		line-height: $line-height-copy;
+	}
 }
 
 @media #{$breakpoint-medium} {
-  .lh-solid-m { line-height: $line-height-solid; }
-  .lh-title-m { line-height: $line-height-title; }
-  .lh-copy-m  { line-height: $line-height-copy; }
+	.lh-solid-m {
+		line-height: $line-height-solid;
+	}
+	.lh-title-m {
+		line-height: $line-height-title;
+	}
+	.lh-copy-m {
+		line-height: $line-height-copy;
+	}
 }
 
 @media #{$breakpoint-large} {
-  .lh-solid-l { line-height: $line-height-solid; }
-  .lh-title-l { line-height: $line-height-title; }
-  .lh-copy-l  { line-height: $line-height-copy; }
+	.lh-solid-l {
+		line-height: $line-height-solid;
+	}
+	.lh-title-l {
+		line-height: $line-height-title;
+	}
+	.lh-copy-l {
+		line-height: $line-height-copy;
+	}
 }
-
