--- a/src/styles/_links.scss
+++ b/src/styles/_links.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -13,22 +10,21 @@
 */
 
 .link {
-  text-decoration: none;
-  transition: color .15s ease-in;
+	text-decoration: none;
+	transition: color 0.15s ease-in;
 }
 
 .link:link,
 .link:visited {
-  transition: color .15s ease-in;
+	transition: color 0.15s ease-in;
 }
-.link:hover   {
-  transition: color .15s ease-in;
+.link:hover {
+	transition: color 0.15s ease-in;
 }
-.link:active  {
-  transition: color .15s ease-in;
+.link:active {
+	transition: color 0.15s ease-in;
 }
-.link:focus   {
-  transition: color .15s ease-in;
-  outline: 1px dotted currentColor;
+.link:focus {
+	transition: color 0.15s ease-in;
+	outline: 1px dotted currentColor;
 }
-
