--- a/src/styles/_lists.scss
+++ b/src/styles/_lists.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -12,4 +9,6 @@
 
 */
 
-.list {         list-style-type: none; }
+.list {
+	list-style-type: none;
+}
