--- a/src/styles/_nested.scss
+++ b/src/styles/_nested.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -16,7 +13,7 @@
 .nested-copy-line-height p,
 .nested-copy-line-height ul,
 .nested-copy-line-height ol {
-  line-height: $line-height-copy;
+	line-height: $line-height-copy;
 }
 
 .nested-headline-line-height h1,
@@ -25,39 +22,39 @@
 .nested-headline-line-height h4,
 .nested-headline-line-height h5,
 .nested-headline-line-height h6 {
-  line-height: $line-height-title;
+	line-height: $line-height-title;
 }
 
 .nested-list-reset ul,
 .nested-list-reset ol {
-  padding-left: 0;
-  margin-left: 0;
-  list-style-type: none;
+	padding-left: 0;
+	margin-left: 0;
+	list-style-type: none;
 }
 
-.nested-copy-indent p+p {
-  text-indent: $letter-spacing-1;
-  margin-top: $spacing-none;
-  margin-bottom: $spacing-none;
+.nested-copy-indent p + p {
+	text-indent: $letter-spacing-1;
+	margin-top: $spacing-none;
+	margin-bottom: $spacing-none;
 }
 
-.nested-copy-seperator p+p {
-  margin-top: $spacing-copy-separator;
+.nested-copy-seperator p + p {
+	margin-top: $spacing-copy-separator;
 }
 
 .nested-img img {
-  width: 100%;
-  max-width: 100%;
-  display: block;
+	width: 100%;
+	max-width: 100%;
+	display: block;
 }
 
 .nested-links a {
-  color: $blue;
-  transition: color .15s ease-in;
+	color: $blue;
+	transition: color 0.15s ease-in;
 }
 
 .nested-links a:hover,
 .nested-links a:focus {
-  color: $light-blue;
-  transition: color .15s ease-in;
+	color: $light-blue;
+	transition: color 0.15s ease-in;
 }
