--- a/src/styles/_outlines.scss
+++ b/src/styles/_outlines.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -16,24 +13,48 @@
 
 */
 
-.outline { outline: 1px solid; }
-.outline-transparent { outline: 1px solid transparent; }
-.outline-0 { outline: 0; }
+.outline {
+	outline: 1px solid;
+}
+.outline-transparent {
+	outline: 1px solid transparent;
+}
+.outline-0 {
+	outline: 0;
+}
 
 @media #{$breakpoint-not-small} {
-  .outline-ns { outline: 1px solid; }
-  .outline-transparent-ns { outline: 1px solid transparent; }
-  .outline-0-ns { outline: 0; }
+	.outline-ns {
+		outline: 1px solid;
+	}
+	.outline-transparent-ns {
+		outline: 1px solid transparent;
+	}
+	.outline-0-ns {
+		outline: 0;
+	}
 }
 
 @media #{$breakpoint-medium} {
-  .outline-m { outline: 1px solid; }
-  .outline-transparent-m { outline: 1px solid transparent; }
-  .outline-0-m { outline: 0; }
+	.outline-m {
+		outline: 1px solid;
+	}
+	.outline-transparent-m {
+		outline: 1px solid transparent;
+	}
+	.outline-0-m {
+		outline: 0;
+	}
 }
 
 @media #{$breakpoint-large} {
-  .outline-l { outline: 1px solid; }
-  .outline-transparent-l { outline: 1px solid transparent; }
-  .outline-0-l { outline: 0; }
+	.outline-l {
+		outline: 1px solid;
+	}
+	.outline-transparent-l {
+		outline: 1px solid transparent;
+	}
+	.outline-0-l {
+		outline: 0;
+	}
 }
