--- a/src/styles/_text-decoration.scss
+++ b/src/styles/_text-decoration.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -18,25 +15,48 @@
 
 */
 
-.strike       { text-decoration: line-through; }
-.underline    { text-decoration: underline; }
-.no-underline { text-decoration: none; }
-
+.strike {
+	text-decoration: line-through;
+}
+.underline {
+	text-decoration: underline;
+}
+.no-underline {
+	text-decoration: none;
+}
 
 @media #{$breakpoint-not-small} {
-  .strike-ns       { text-decoration: line-through; }
-  .underline-ns    { text-decoration: underline; }
-  .no-underline-ns { text-decoration: none; }
+	.strike-ns {
+		text-decoration: line-through;
+	}
+	.underline-ns {
+		text-decoration: underline;
+	}
+	.no-underline-ns {
+		text-decoration: none;
+	}
 }
 
 @media #{$breakpoint-medium} {
-  .strike-m       { text-decoration: line-through; }
-  .underline-m    { text-decoration: underline; }
-  .no-underline-m { text-decoration: none; }
+	.strike-m {
+		text-decoration: line-through;
+	}
+	.underline-m {
+		text-decoration: underline;
+	}
+	.no-underline-m {
+		text-decoration: none;
+	}
 }
 
 @media #{$breakpoint-large} {
-  .strike-l       { text-decoration: line-through; }
-  .underline-l {    text-decoration: underline; }
-  .no-underline-l { text-decoration: none; }
+	.strike-l {
+		text-decoration: line-through;
+	}
+	.underline-l {
+		text-decoration: underline;
+	}
+	.no-underline-l {
+		text-decoration: none;
+	}
 }
