--- a/src/styles/_type-scale.scss
+++ b/src/styles/_type-scale.scss
@@ -1,9 +1,6 @@
-
 // Converted Variables
 
-
 // Custom Media Query Variables
-
 
 /*
 
@@ -36,67 +33,129 @@
 
 .f-6,
 .f-headline {
-  font-size: $font-size-headline;
+	font-size: $font-size-headline;
 }
 .f-5,
 .f-subheadline {
-  font-size: $font-size-subheadline;
+	font-size: $font-size-subheadline;
 }
-
 
 /* Type Scale */
 
+.f1 {
+	font-size: $font-size-1;
+}
+.f2 {
+	font-size: $font-size-2;
+}
+.f3 {
+	font-size: $font-size-3;
+}
+.f4 {
+	font-size: $font-size-4;
+}
+.f5 {
+	font-size: $font-size-5;
+}
+.f6 {
+	font-size: $font-size-6;
+}
+.f7 {
+	font-size: $font-size-7;
+}
 
-.f1 { font-size: $font-size-1; }
-.f2 { font-size: $font-size-2; }
-.f3 { font-size: $font-size-3; }
-.f4 { font-size: $font-size-4; }
-.f5 { font-size: $font-size-5; }
-.f6 { font-size: $font-size-6; }
-.f7 { font-size: $font-size-7; }
-
-@media #{$breakpoint-not-small}{
-  .f-6-ns,
-  .f-headline-ns { font-size: $font-size-headline; }
-  .f-5-ns,
-  .f-subheadline-ns { font-size: $font-size-subheadline; }
-  .f1-ns { font-size: $font-size-1; }
-  .f2-ns { font-size: $font-size-2; }
-  .f3-ns { font-size: $font-size-3; }
-  .f4-ns { font-size: $font-size-4; }
-  .f5-ns { font-size: $font-size-5; }
-  .f6-ns { font-size: $font-size-6; }
-  .f7-ns { font-size: $font-size-7; }
+@media #{$breakpoint-not-small} {
+	.f-6-ns,
+	.f-headline-ns {
+		font-size: $font-size-headline;
+	}
+	.f-5-ns,
+	.f-subheadline-ns {
+		font-size: $font-size-subheadline;
+	}
+	.f1-ns {
+		font-size: $font-size-1;
+	}
+	.f2-ns {
+		font-size: $font-size-2;
+	}
+	.f3-ns {
+		font-size: $font-size-3;
+	}
+	.f4-ns {
+		font-size: $font-size-4;
+	}
+	.f5-ns {
+		font-size: $font-size-5;
+	}
+	.f6-ns {
+		font-size: $font-size-6;
+	}
+	.f7-ns {
+		font-size: $font-size-7;
+	}
 }
 
 @media #{$breakpoint-medium} {
-  .f-6-m,
-  .f-headline-m { font-size: $font-size-headline; }
-  .f-5-m,
-  .f-subheadline-m { font-size: $font-size-subheadline; }
-  .f1-m { font-size: $font-size-1; }
-  .f2-m { font-size: $font-size-2; }
-  .f3-m { font-size: $font-size-3; }
-  .f4-m { font-size: $font-size-4; }
-  .f5-m { font-size: $font-size-5; }
-  .f6-m { font-size: $font-size-6; }
-  .f7-m { font-size: $font-size-7; }
+	.f-6-m,
+	.f-headline-m {
+		font-size: $font-size-headline;
+	}
+	.f-5-m,
+	.f-subheadline-m {
+		font-size: $font-size-subheadline;
+	}
+	.f1-m {
+		font-size: $font-size-1;
+	}
+	.f2-m {
+		font-size: $font-size-2;
+	}
+	.f3-m {
+		font-size: $font-size-3;
+	}
+	.f4-m {
+		font-size: $font-size-4;
+	}
+	.f5-m {
+		font-size: $font-size-5;
+	}
+	.f6-m {
+		font-size: $font-size-6;
+	}
+	.f7-m {
+		font-size: $font-size-7;
+	}
 }
 
 @media #{$breakpoint-large} {
-  .f-6-l,
-  .f-headline-l {
-    font-size: $font-size-headline;
-  }
-  .f-5-l,
-  .f-subheadline-l {
-    font-size: $font-size-subheadline;
-  }
-  .f1-l { font-size: $font-size-1; }
-  .f2-l { font-size: $font-size-2; }
-  .f3-l { font-size: $font-size-3; }
-  .f4-l { font-size: $font-size-4; }
-  .f5-l { font-size: $font-size-5; }
-  .f6-l { font-size: $font-size-6; }
-  .f7-l { font-size: $font-size-7; }
+	.f-6-l,
+	.f-headline-l {
+		font-size: $font-size-headline;
+	}
+	.f-5-l,
+	.f-subheadline-l {
+		font-size: $font-size-subheadline;
+	}
+	.f1-l {
+		font-size: $font-size-1;
+	}
+	.f2-l {
+		font-size: $font-size-2;
+	}
+	.f3-l {
+		font-size: $font-size-3;
+	}
+	.f4-l {
+		font-size: $font-size-4;
+	}
+	.f5-l {
+		font-size: $font-size-5;
+	}
+	.f6-l {
+		font-size: $font-size-6;
+	}
+	.f7-l {
+		font-size: $font-size-7;
+	}
 }
