chore: remove extra files

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -24,50 +24,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
   <link rel="manifest" href="/images/site.webmanifest">
   <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
-
-
-  <script>
-  (function (a, b, c) {
-    var d = a.history, e = document, f = navigator || {}, g = localStorage,
-    h = encodeURIComponent, i = d.pushState, k = function () { return Math.random().toString(36) },
-    l = function () { return g.cid || (g.cid = k()), g.cid }, m = function (r) {
-      var s = []; for (var t in r)
-        r.hasOwnProperty(t) && void 0 !== r[t] && s.push(h(t) + "=" + h(r[t])); return s.join("&")
-    },
-    n = function (r, s, t, u, v, w, x) {
-      var z = "https://www.google-analytics.com/collect",
-      A = m({
-        v: "1", ds: "web", aip: c.anonymizeIp ? 1 : void 0, tid: b, cid: l(), t: r || "pageview",
-        sd: c.colorDepth && screen.colorDepth ? screen.colorDepth + "-bits" : void 0, dr: e.referrer ||
-          void 0, dt: e.title, dl: e.location.origin + e.location.pathname + e.location.search, ul: c.language ?
-            (f.language || "").toLowerCase() : void 0, de: c.characterSet ? e.characterSet : void 0,
-        sr: c.screenSize ? (a.screen || {}).width + "x" + (a.screen || {}).height : void 0, vp: c.screenSize &&
-          a.visualViewport ? (a.visualViewport || {}).width + "x" + (a.visualViewport || {}).height : void 0,
-        ec: s || void 0, ea: t || void 0, el: u || void 0, ev: v || void 0, exd: w || void 0, exf: "undefined" != typeof x &&
-          !1 == !!x ? 0 : void 0
-      }); if (f.sendBeacon) f.sendBeacon(z, A); else {
-        var y = new XMLHttpRequest;
-        y.open("POST", z, !0), y.send(A)
-      }
-    }; d.pushState = function (r) {
-      return "function" == typeof d.onpushstate &&
-        d.onpushstate({ state: r }), setTimeout(n, c.delay || 10), i.apply(d, arguments)
-    }, n(),
-      a.ma = {
-        trackEvent: function o(r, s, t, u) { return n("event", r, s, t, u) },
-        trackException: function q(r, s) { return n("exception", null, null, null, null, r, s) }
-      }
-  })
-    (window, "{{google_analytics}}", { anonymizeIp: true, colorDepth: true, characterSet: true, screenSize: true, language: true });
-</script>
-
 </head>
-<body class="bg-tile light" id="top" itemscope itemtype="http://schema.org/WebPage">
+<body class="bg-tile light" id="top">
   <main class="h-100 flex main flex-column">
   <div class="flex pa3 flex-row justify-between align-items-center w-100">
-  <div class="d-block w-100">
-    <a class="github-button" href="https://github.com/mckeever02/mailtolink" data-icon="octicon-star" data-show-count="true" aria-label="Star mckeever02/mailtolink on GitHub">Star</a>
-  </div>
   <div class="d-flex flex-row justify-center w-100 tc">
     <a class="link f6" href="https://twitter.com/mmckvr">@mmckvr</a>
     <span class="mh-3 seperator">&middot;</span>
@@ -138,7 +98,6 @@
   </div>
 </div>
 </main>
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
   <script src="/scripts/index.js"></script>
 </body>
 </html>
