feat: rewrite core script

--- a/src/index.njk
+++ b/src/index.njk
@@ -64,19 +64,12 @@
 						title="GitHub"
 					></iframe>
 				</div>
-				<div class="d-flex flex-row justify-center w-100 tc">
-					<a class="link f6" href="https://twitter.com/mmckvr">@mmckvr</a>
-					<span class="mh-3 seperator">&middot;</span>
-					<a class="link f6" href="https://www.buymeacoffee.com/mckvr"
-						>Buy me a beer 🍺</a
-					>
-				</div>
 				<div class="d-block w-100 flex flex-row justify-end">
 					<button
 						id="nav-light"
 						class="button-reset bg-transparent b--none pa0 btn-mode"
 						type="button"
-						aria-label="Click to toggle Dark/Light mode"
+						aria-label="Toggle light/dark mode"
 					>
 						<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 							<g fill="none" fill-rule="evenodd">
@@ -210,7 +203,7 @@
 						><span class="bodyOutput"></span>
 					</div>
 					<a class="btn btn-md fw6 ml2 copyCode" href="javascript:void(0);"
-						>Copy Code</a
+						>Copy</a
 					>
 				</div>
 			</div>
