--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -355,7 +355,7 @@ textarea {
 	white-space: nowrap;
 }
 .bg-tile {
-	background-image: url('/images/tile.svg');
+	background-image: url('/assets/tile.svg');
 	background-repeat: repeat;
 	background-size: 60%;
 	background-position: -3px -45%;
