--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -397,7 +397,7 @@ textarea {
 		color: $white;
 	}
 	&.bg-tile {
-		background-image: url('/images/tile-dark.svg');
+		background-image: url('/assets/tile-dark.svg');
 		background-color: $black;
 	}
 	.email-window,
