refactor: remove unused styling

--- a/src/index.njk
+++ b/src/index.njk
@@ -97,7 +97,7 @@
 							id="recipient"
 							tabindex="1"
 							name="recipient"
-							class="input input-reset tagify pv3 h-100 db w-100 bg-transparent b--none pl2 pl3-ns f5"
+							class="input input-reset pv3 h-100 db w-100 bg-transparent b--none pl2 pl3-ns f5"
 							type="email"
 							autofocus
 							multiple
