feat: add analytics

--- a/src/index.njk
+++ b/src/index.njk
@@ -14,6 +14,8 @@
 		</style>
 		<link rel="stylesheet" href="/styles/index.css" />
 
+        <script async src="https://analytik.uncenter.dev/script.js" data-website-id="1f1be167-512e-4aca-b3a2-264ce41d814c"></script>
+
         <meta name="description" content="{{ site.description }}" />
 		<meta name="theme-color" content="{{ site.theme_color }}" />
 		<meta
