--- a/src/styles/_normalize.scss
+++ b/src/styles/_normalize.scss
@@ -1,11 +1,4 @@
-// Converted Variables
-
-// Custom Media Query Variables
-
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
 
 /**
  * 1. Correct the line height in all browsers.
@@ -18,9 +11,6 @@ html {
 	-ms-text-size-adjust: 100%; /* 2 */
 	-webkit-text-size-adjust: 100%; /* 2 */
 }
-
-/* Sections
-   ========================================================================== */
 
 /**
  * Remove the margin in all browsers (opinionated).
@@ -52,9 +42,6 @@ h1 {
 	font-size: 2em;
 	margin: 0.67em 0;
 }
-
-/* Grouping content
-   ========================================================================== */
 
 /**
  * Add the correct display in IE 9-.
@@ -96,9 +83,6 @@ pre {
 	font-family: monospace, monospace; /* 1 */
 	font-size: 1em; /* 2 */
 }
-
-/* Text-level semantics
-   ========================================================================== */
 
 /**
  * 1. Remove the gray background on active links in IE 10.
@@ -197,9 +181,6 @@ sup {
 	top: -0.5em;
 }
 
-/* Embedded content
-   ========================================================================== */
-
 /**
  * Add the correct display in IE 9-.
  */
@@ -233,9 +214,6 @@ img {
 svg:not(:root) {
 	overflow: hidden;
 }
-
-/* Forms
-   ========================================================================== */
 
 /**
  * 1. Change the font styles in all browsers (opinionated).
@@ -402,9 +380,6 @@ textarea {
 	font: inherit; /* 2 */
 }
 
-/* Interactive
-   ========================================================================== */
-
 /*
  * Add the correct display in IE 9-.
  * 1. Add the correct display in Edge, IE, and Firefox.
@@ -423,32 +398,44 @@ summary {
 	display: list-item;
 }
 
-/* Scripting
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 9-.
- */
-
-canvas {
-	display: inline-block;
-}
-
-/**
- * Add the correct display in IE.
- */
-
-template {
-	display: none;
-}
-
-/* Hidden
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10-.
- */
-
-[hidden] {
-	display: none;
+html,
+body,
+div,
+article,
+section,
+main,
+footer,
+header,
+form,
+fieldset,
+legend,
+pre,
+code,
+a,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li,
+dl,
+dt,
+dd,
+textarea,
+table,
+td,
+th,
+tr,
+input[type='email'],
+input[type='number'],
+input[type='password'],
+input[type='tel'],
+input[type='text'],
+input[type='url'],
+.border-box {
+	box-sizing: border-box;
 }
