--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -1,15 +1,3 @@
-// Converted Variables
-
-// Custom Media Query Variables
-
-/*
-
-  STYLES
-
-  Add custom styles here.
-
-*/
-
 @keyframes slideIn {
 	0% {
 		transform: translateY(200px);
@@ -39,17 +27,9 @@
 	}
 }
 
-.label {
-	display: none;
-}
-
 html,
 body {
 	height: 100%;
-}
-
-html,
-body {
 	overflow: hidden;
 }
 
@@ -58,67 +38,6 @@ input,
 textarea {
 	font-family: 'IBM Plex Mono', sans-serif;
 	font-style: normal;
-}
-
-.email-body {
-	background-color: $white;
-	transition: all $mode-timing ease;
-	height: 100%;
-	overflow: hidden;
-	textarea {
-		height: 95%;
-		&::placeholder {
-			color: $gray;
-		}
-	}
-	@media (min-width: 1921px) {
-		min-height: 70vh;
-	}
-}
-
-.btn-mode {
-	width: 18px;
-	height: 18px;
-	transition: transform 0.3s ease;
-	path:first-of-type {
-		fill: $black;
-	}
-	path:last-of-type {
-		fill: $white;
-	}
-	&:hover {
-		transform: rotate(180deg);
-	}
-	&:focus {
-		outline: none;
-	}
-	@media #{$breakpoint-not-small} {
-		width: 20px;
-		height: 20px;
-	}
-}
-
-.btn-sm {
-	border: 1px solid $gray-30;
-	color: $gray-40;
-	width: 50px;
-	text-decoration: none;
-	transition: all 0.1s ease;
-	&:hover {
-		background-color: $near-black;
-		color: $white;
-		border-color: $near-black;
-	}
-	@media #{$breakpoint-not-small} {
-		width: 60px;
-	}
-}
-
-.link {
-	color: $black;
-	&:hover {
-		text-decoration: underline;
-	}
 }
 
 .email-window {
@@ -190,20 +109,6 @@ textarea {
 .email-compose {
 	border-color: $border-color;
 	transition: all $mode-timing ease;
-}
-
-.app-circle {
-	background-color: $gray-30;
-	transition: background-color $mode-timing ease;
-	width: 10px;
-	height: 10px;
-	border-radius: 9999px;
-	margin-right: 3px;
-	@media #{$breakpoint-not-small} {
-		margin-right: 8px;
-		width: 12px;
-		height: 12px;
-	}
 }
 
 input,
@@ -297,6 +202,7 @@ textarea {
 	padding-right: 1rem;
 	white-space: nowrap;
 }
+
 .bg-tile {
 	background-image: url('/assets/tile.svg');
 	background-repeat: repeat;
@@ -313,10 +219,6 @@ textarea {
 	}
 }
 
-.seperator {
-	color: $black;
-}
-
 ::selection {
 	background: $light-green;
 	color: $white;
@@ -324,19 +226,13 @@ textarea {
 
 /* purgecss start ignore */
 
-.dark {
+:root[theme='dark'] {
 	body,
 	input,
 	textarea {
 		color: $white;
 	}
-	.seperator {
-		color: $white;
-	}
-	.link {
-		color: $white;
-	}
-	&.bg-tile {
+	.bg-tile {
 		background-image: url('/assets/tile-dark.svg');
 		background-color: $black;
 	}
@@ -356,28 +252,6 @@ textarea {
 		background-color: $white;
 		color: $black;
 		box-shadow: none;
-	}
-	.btn-sm {
-		border: 1px solid darken($black, 10%);
-		color: $gray-40;
-		&:hover {
-			background-color: $white;
-			color: $near-black;
-			border-color: $white;
-		}
-	}
-	.btn-mode {
-		path:first-of-type {
-			fill: $white;
-		}
-		path:last-of-type {
-			fill: $black;
-		}
-	}
-	.email-body {
-		&::placeholder {
-			color: $white;
-		}
 	}
 }
 
